--- a/tmux.conf
+++ b/tmux.conf
@@ -123,8 +123,8 @@ tmux_conf_theme_window_status_format='#I #W'
 #     - #{hostname_ssh}
 #     - #{username}
 #     - #{username_ssh}
-tmux_conf_theme_window_status_current_fg='#000000'      # black
-tmux_conf_theme_window_status_current_bg='#ff4319'      # light blue
+tmux_conf_theme_window_status_current_fg='#e4e4e4'      # black#000000   #este es el de ZSH
+tmux_conf_theme_window_status_current_bg='#ff1962'      # light blue,  naranja#ff4319 #moradolila863399 #moramagenta#c70039 azuliloso#523299
 tmux_conf_theme_window_status_current_attr='bold'
 tmux_conf_theme_window_status_current_format='#I #W'
 #tmux_conf_theme_window_status_current_format='#{circled_window_index} #W'
@@ -186,14 +186,13 @@ tmux_conf_theme_status_right='#{prefix}#{pairing}#{synchronized} #{?battery_stat
 #tmux_conf_theme_status_left_bg='#ffff00,#ff00af,#00afff'  # yellow, pink, white blue
 #tmux_conf_theme_status_left_attr='bold,none,none'
 tmux_conf_theme_status_left_fg='#e4e4e4,#e4e4e4,#e4e4e4'  # black, white , white
-tmux_conf_theme_status_left_bg='#900c3f,#c70039,#ff5733'  # yellow, pink, white blue
+tmux_conf_theme_status_left_bg='#ff4319,#900c3f,#ff5733'  # yellow, pink, white blue deeppurple#900c3f,  lila#863399
 tmux_conf_theme_status_left_attr='bold,none,none'
 
 
-
 # status right style
-tmux_conf_theme_status_right_fg='#8a8a8a,#000000,#e4e4e4' # light gray, white#e4e4e4, black
-tmux_conf_theme_status_right_bg='#080808,#863399,#8E2F65' # dark gray, red#d70000, white#e4e4e4
+tmux_conf_theme_status_right_fg='#e4e4e4,#e4e4e4,#e4e4e4' # light gray #8a8a8a, white#e4e4e4, black
+tmux_conf_theme_status_right_bg='#080808,#863399,#8E2F65' # dark gray, red#d70000, white#e4e4e4, lila#863399, naranja#ff4319
 tmux_conf_theme_status_right_attr='none,none,bold'
 
 # pairing indicator
